[gd_scene load_steps=11 format=2]

[ext_resource path="res://gameArt/space_shooter_pack/space_shooter_pack/spritesheets/PNG/Enemies/enemyRed3.png" type="Texture" id=1]
[ext_resource path="res://gameArt/space_shooter_pack/space_shooter_pack/spritesheets/PNG/Enemies/enemyRed2.png" type="Texture" id=2]
[ext_resource path="res://gameArt/SpaceShooterRedux/PNG/Enemies/enemyBlack5.png" type="Texture" id=3]
[ext_resource path="res://gameArt/space_shooter_pack/space_shooter_pack/spritesheets/PNG/Enemies/enemyRed3Hit.png" type="Texture" id=4]
[ext_resource path="res://gameArt/SpaceShooterRedux/PNG/Enemies/enemyBlack5HIt.png" type="Texture" id=5]
[ext_resource path="res://gameArt/space_shooter_pack/space_shooter_pack/spritesheets/Bonus/sfx_laser2.ogg" type="AudioStream" id=6]
[ext_resource path="res://gameArt/space_shooter_pack/space_shooter_pack/spritesheets/PNG/Enemies/enemyRed2Hit.png" type="Texture" id=7]
[ext_resource path="res://scenes/ships/EnemyShips/Enemy.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Level2Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Level2Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Level3Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "Level1Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Level1Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Level3Hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 48.9828
height = 14.8246

[node name="Enemy" type="Area2D"]
script = ExtResource( 8 )
max_health = 25

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Level3Hit"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
